style: fix form section padding on mobile-size

--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,8 @@ footer {
   }
   #form-area section {
     max-width: 100%;
-    padding: 0;
+    padding: 0.25rem;
+    border-radius: 7px;
   }
 
   #form-area section > button {
